forth/test/fail/test_assert_static_fail.af
use' ../../lang.af

fun: .test_assert_static_fail
  assert= 10 20 end
end
